Address PR review feedback